Preparing for Gradle 10